# decasify

./: .editorconfig  .gitignore  .luacheckrc  .luacov  .luarc.json  .typos.toml  CHANGELOG.md  Cargo.toml  Justfile  Makefile.am  README.md  REUSE.toml  bootstrap.sh  build.rs  configure.ac  decasify-dev-1.rockspec  decasify.nvim-dev-1.rockspec  decasify.nvim.rockspec.in  decasify.rockspec.in  decasify.sile-dev-1.rockspec  decasify.sile.rockspec.in  default.nix  deny.toml  flake.nix  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: busted.yml  deploy.yml  luacheck.yml  nix.yml  release.yml  rust_bloat.yml  rust_lint.yml  rust_test.yml
LICENSES/: 0BSD.txt
build-aux/: ax_shell_completion_dirs.m4  build.rs  extract_codeblocks.lua  que_dist_checksums.m4  que_git_version.m4  que_rust_boilerplate.am  que_rust_boilerplate.m4  que_shell_completion_dirs.m4  que_shell_completion_dirs.mk  shell_completion_dirs.am
lua-bindings/: Cargo.toml
lua-bindings/src/: lib.rs
node/: load.cts
plugin/: decasify.lua  decasify.vim
rockspecs/: decasify-0.10.0-1.rockspec  decasify-0.10.1-1.rockspec  decasify-0.10.2-1.rockspec  decasify-0.11.0-1.rockspec  decasify-0.11.1-1.rockspec  decasify-0.11.2-1.rockspec  decasify-0.11.3-1.rockspec  decasify-0.4.4-1.rockspec  decasify-0.5.1-1.rockspec  decasify.nvim-0.10.0-1.rockspec  decasify.nvim-0.10.1-1.rockspec  decasify.nvim-0.10.2-1.rockspec  decasify.nvim-0.11.0-1.rockspec  decasify.nvim-0.11.1-1.rockspec  decasify.nvim-0.11.2-1.rockspec  decasify.nvim-0.11.3-1.rockspec  decasify.sile-0.10.0-1.rockspec  decasify.sile-0.10.1-1.rockspec  decasify.sile-0.10.2-1.rockspec  decasify.sile-0.11.0-1.rockspec  decasify.sile-0.11.1-1.rockspec  decasify.sile-0.11.2-1.rockspec  decasify.sile-0.11.3-1.rockspec
sile/: README.md  decasify.lua
spec/: decasify_spec.lua
src/: cli.rs  content.rs  en.rs  es.rs  fr.rs  generics.rs  lib.rs  lua.rs  node.rs  python.rs  tr.rs  traits.rs  types.rs  wasm.rs
tests/: cli.rs  lib.rs  styled.html  styled.sil  styled.typ  test_all.py  wasm.js
typst/: Cargo.toml  README.md  decasify.typ  example.typ  lib.typ  typst.toml.in
typst/src/: lib.rs
