[package]
name = "decasify"
version = "0.1.0"
authors = ["Caleb Maclennan <caleb@alerque.com>"]
edition = "2021"
description = "A CLI tool to convert all-caps strings to title-case or other less aggressive tones that supports Turkish input."
readme = "README.md"
homepage = "https://github.com/alerque/decasify"
repository = "https://github.com/alerque/decasify"
license = "GPL-3.0-only"
build = "build.rs"
include = ["*.rs"]

[lib]
name = "decasify"
crate-type = ["cdylib"]

[[bin]]
name = "decasify"
required-features = ["cli"]

[dependencies]
regex = "1.9"
unicode_titlecase = "2.1"

  [dependencies.clap]
  version = "4.3"
  optional = true
  features = [ "derive", "wrap_help" ]

  [dependencies.mlua]
  version = "0.8"
  optional = true
  features = [ "module", "send", "serialize" ]

[build-dependencies]

  [build-dependencies.clap_complete]
  version = "4.3"
  optional = true

  [build-dependencies.clap_mangen]
  version = "0.2"
  optional = true

  [build-dependencies.clap]
  version = "4.3"
  optional = true
  features = [ "derive" ]

  [build-dependencies.vergen]
  version = "8.2"
  default-features = false
  features = [ "build", "cargo", "git", "gitoxide" ]

[features]
default = []
full = ["cli", "bash", "elvish", "fish", "manpage", "powershell", "zsh"]
completions = ["cli", "clap_complete"]
cli = ["clap"]
luamodule = []
bash = ["completions"]
elvish = ["completions"]
fish = ["completions"]
manpage = ["clap_mangen"]
powershell = ["completions"]
zsh = ["completions"]
lua54 = ["luamodule", "mlua/lua54"]
lua53 = ["luamodule", "mlua/lua53"]
lua52 = ["luamodule", "mlua/lua52"]
lua51 = ["luamodule", "mlua/lua51"]
luajit = ["luamodule", "mlua/luajit"]
vendored = ["mlua/vendored"]

[profile.release]
lto = true
