[package]
name = "decasify"
version = "0.5.2"
authors = ["Caleb Maclennan <caleb@alerque.com>"]
edition = "2021"
rust-version = "1.73.0"
description = "A CLI utility and library to cast strings to title-case according to locale specific style guides including Turkish support"
readme = "README.md"
homepage = "https://github.com/alerque/decasify"
repository = "https://github.com/alerque/decasify"
license = "GPL-3.0-only"
build = "build-aux/build.rs"
include = ["*.rs"]

[lib]
name = "decasify"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "decasify"
required-features = ["cli"]

[features]
default = []
full = ["cli", "bash", "elvish", "fish", "manpage", "powershell", "zsh"]
completions = ["cli", "clap_complete"]
cli = ["clap"]
bash = ["completions"]
elvish = ["completions"]
fish = ["completions"]
manpage = ["clap_mangen"]
powershell = ["completions"]
zsh = ["completions"]
luamodule = []
lua54 = ["luamodule", "mlua/lua54"]
lua53 = ["luamodule", "mlua/lua53"]
lua52 = ["luamodule", "mlua/lua52"]
lua51 = ["luamodule", "mlua/lua51"]
luajit = ["luamodule", "mlua/luajit"]
pythonmodule = ["pyo3"]

[profile.release]
lto = true

[dependencies]
regex = "1.10"
strum = "0.26"
strum_macros = "0.26"
unicode_titlecase = "2.3"

  [dependencies.clap]
  version = "4.5"
  optional = true
  features = ["derive", "wrap_help"]

  [dependencies.mlua]
  version = "0.9"
  optional = true
  features = ["module"]

  [dependencies.pyo3]
  version = "0.22"
  optional = true
  features = [ "extension-module" ]

  [dependencies.titlecase]
  version = "3.2"
  features = [ "perf" ]

[build-dependencies]
strum = "0.26"
strum_macros = "0.26"

  [build-dependencies.clap_complete]
  version = "4.5"
  optional = true

  [build-dependencies.clap_mangen]
  version = "0.2"
  optional = true

  [build-dependencies.clap]
  version = "4.5"
  optional = true
  features = ["derive"]

  [build-dependencies.vergen]
  version = "8.3"
  default-features = false
  features = ["build", "cargo", "git", "gitoxide"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
