[package]
name = "typst"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
wasm-minimal-protocol = "0.1"

[dependencies.decasify]
workspace = true
